# doom-wolf-rpg-android-port

./: .gitmodules  settings.gradle
CTranslate2Proxy/src/main/java/com/mobilerpgpack/ctranslate2proxy/: Translator.kt
CTranslate2Proxy/src/main/jni/: Android.mk
CTranslate2Proxy/src/main/jni/include/onmt/: opennmttokenizer_export.h
CTranslate2Proxy/src/main/jni/src/: OpusMtTranslator.cpp
Tokenizer/: CMakeLists.txt  build.gradle
app/src/main/java/com/mobilerpgpack/phone/translator/: IntervalMarkerTranslator.kt  TranslationManager.kt
icu4c/: build.gradle
